...
                children: <Widget>[
                  Container(
                    margin: const EdgeInsets.all(30.0),
                    padding: const EdgeInsets.all(8.0),
                    alignment: Alignment.topCenter,
                  child: const Text(
                      "Place Bid",
                      style: TextStyle(fontSize: 30),
                    ),
                  ),
        
                  //*****************Tradesman rates slider**********************
                  const Text(
...
                    onPressed: () {
                      Navigator.pop(context);
                    },
                    style: TextButton.styleFrom(
                      primary: Colors.orange,
                    ),
                    child: const Text('Cancel'),
                  ),
                  ElevatedButton(
                    onPressed: () {
                      vm.dispatchPlaceBidAction(vm.advert.id,vm.id,_currentRangeValues.start.round(),_currentRangeValues.end.round());
                      Navigator.pop(context);
                    },
...
