...
                      ),
                    ),
                  //*******************************************//
                  Padding(
                    padding: const EdgeInsets.only(top: 5),
                    child: LongButtonWidget(
                      text: "View Bids (${vm.bidCount})",
                      backgroundColor:
                          vm.bidCount == 0 ? Colors.grey : Colors.orange,
                      function: () {
                        if (vm.bidCount != 0) vm.pushViewBidsPage();
                      },
                    ),
...
